[project]
name = "bankchase-backend"
version = "0.1.0"
description = "BankChase FastAPI backend - Banking API with behavioral drift detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
]
